syntax = "proto3";

package compiler;

option go_package = "/compiler";

service CompilerService {
    rpc Execute(SourceCode) returns (Output);
}

message SourceCode {
    string language = 1;
    string code = 2;
    repeated string args =3;
}

message Output {
    string output = 1;
}