syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

option go_package = "/user";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (User);
    rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
    rpc GetUserById(GetUserByIdRequest) returns (User);
    rpc GetUserByEmail(GetUserByEmailRequest) returns (User);
    rpc UpdateUserById(UpdateUserByIdRequest) returns (User);
    rpc DeleteUserById(DeleteUserByIdRequest) returns (DeleteUserByIdResponse);
}

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    repeated string roles = 4;
    int32 xp = 5;
    bool is_banned = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message CreateUserRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message GetUserByIdRequest {
    string id = 1;
}

message GetUserByEmailRequest {
    string email = 1;
}

message UpdateUserByIdRequest {
    string id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    repeated string roles = 5;
    int32 xp = 6;
    bool is_banned = 7;
}

message DeleteUserByIdRequest {
    string id = 1;
}

message DeleteUserByIdResponse {
    string message = 1;
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
    repeated User users = 1;
}
